Updating with new slides.

--- a/index.html
+++ b/index.html
@@ -64,37 +64,37 @@
 					<p>One important difference! It should be easy for the human to reverse and not a computer.</p>
 				</section>
 
-				<!-- Example of nested vertical slides -->
 				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
+					<h2>Why Would you Release This?!</h2>
+					<p><a href="http://www.boyter.org/decoding-captchas/">http://www.boyter.org/decoding-captchas/</a></p>
+					<p>There are some excellent tutorials and many published papers on it they are very light on algorithms or sample code.</p>
+					<p>It's what I wish existed when I was looking into the space.</p>
+				</section>
+
+				
+
+				<section>
+					<h2>Example / Weaknesses</h2>
+					<p><img width="100%" src="./code/captcha.gif" />
+						Real life CAPTCHA (at the time)
+					</p>
+					<p>
+						Single colour background, constant font, no mixing of case, characters aligned, no rotation, no deformation, same colour font, etc...
+					</p>
 				</section>
 
 				<section>
-					<h2>Slides</h2>
+					<h2>Extracting Text</h2>
+					<p><img width="100%" src="./code/captcha.gif" />
+					</p>
 					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slides.com" target="_blank">http://slides.com</a>.
+						Multivalued Image Decomposition
 					</p>
 				</section>
+
+
+
+<!-------------------------------------------------------------->
 
 				<section>
 					<h2>Point of View</h2>
