Adding in steps to go with presentation. Step1 is displaying the histogram and the values that we want to collect. Step2 is putting this into practice and saving the image.

--- a/index.html
+++ b/index.html
@@ -85,11 +85,8 @@
 
 				<section>
 					<h2>Extracting Text</h2>
-					<p><img width="100%" src="./code/captcha.gif" />
-					</p>
-					<p>
-						Multivalued Image Decomposition
-					</p>
+					<p><img width="100%" src="./code/captcha.gif" /></p>
+					<p><img width="100%" src="./code/output.gif" /></p>
 				</section>
 
 
