--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!doctype html>
 <html lang="en">
-
 	<head>
 		<meta charset="utf-8">
-
 		<title>Decoding CAPTCHA's in Python for Fun and Profit</title>
-
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
-
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css" id="theme">
-
-		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
@@ -28,17 +18,12 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
-
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
-
 	<body>
-
 		<div class="reveal">
-
-			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
 					<h1>Decoding CAPTCHA's for Fun and Profit</h1>
@@ -77,7 +62,7 @@
 				<section>
 					<h2>Example / Weaknesses</h2>
 					<p><img width="100%" src="./code/captcha.gif" />
-						Real life CAPTCHA (at the time)
+						Real life CAPTCHA (at the time) Some noise, but this is not a huge problem.
 					</p>
 					<p>
 						Single colour background, constant font, no mixing of case, characters aligned, no rotation, no deformation, same colour font, etc...
@@ -86,6 +71,7 @@
 
 				<section>
 					<h2>Extracting Text</h2>
+					<p>Multivalued Image Decomposition (DEMO)</p>
 					<pre><code data-trim contenteditable>
 from PIL import Image
 from operator import itemgetter
@@ -102,11 +88,27 @@ print his
 
 for j, k in sorted(values.items(), key=itemgetter(1), reverse=True)[:10]:
   print j, k</code></pre>
+  					<small>Other options include edge detection, horizontal blur, disjoint sets etc...</small>
 				</section>
 
 				<section>
 					<h2>Result</h2>
+					<p>Pixel sets 220 and 227 produce...</p>
 					<p><img width="100%" src="./code/output.gif" /></p>
+					<p>Background noise all gone.</p>
+				</section>
+
+				<section>
+					<h2>Identifying Text Locations</h2>
+					
+					<img width="45%" src="./code/output.blur.png">
+					<img width="45%" src="./code/output.fixed.png">
+					<img width="45%" src="./code/output.slice.png">
+					<img width="45%" src="./code/output.letter.png">
+
+					<p>How to know where the characters are?</p>
+					<p>Horizontal blur, fixed positions, vertical slices, letter dip checks, extract and test, disjoint sets.</p>
+
 				</section>
 
 
