Updated slide to be correct about the cracks per day.

--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@ real	0m3.312s
 user	0m3.012s
 sys	0m0.088s
 </code></pre>
-<p>Works out to be over 100,000 sucessful cracks per 24 hours per CPU core.</p>
+<p>Over 100,000 sucessful cracks per 24 hours per CPU core.</p>
+<p>Could improve recognition at expense of speed.</p>
 				</section>
 
 				<section>
