Updated to plug myself a little more at the end :)

--- a/index.html
+++ b/index.html
@@ -309,7 +309,6 @@ sys	0m0.088s
 					<h2>Conclusion</h2>
 					<p>Most of the bad results come from the letter O and number 0 and other instances of similar looking letters and numbers.</p>
 					<p>Issues where letters in the CAPTCHA are joined and our technique is unable to split them correctly.</p>
-					<p>This CAPTCHA is effectively cracked.</p>
 				</section>
 
 				<section>
@@ -324,10 +323,14 @@ sys	0m0.088s
 
 				<section>
 					<h2>Enjoy?</h2>
-					<p>Check out my other project,</p>
+					<p>Check out my project,</p>
 					<img style="border:none; box-shadow: none;" src="./code/searchcode_logo.png" />
 					<br /><a href="https://searchcode.com/"><small>https://searchcode.com</small></a>
-					<p>Follow me on twitter @boyter</p>
+					<p>Follow me on twitter <a href="https://twitter.com/boyter">@boyter</a> or <a href="www.boyter.org">www.boyter.org</a></p>
+					<p>Get this presentation at Bitbucket and Github<br>
+						<a href="https://bitbucket.org/boyter/decodingcaptchas/">https://bitbucket.org/boyter/decodingcaptchas/</a>
+						<a href="https://github.com/boyter/decodingcaptchas">https://github.com/boyter/decodingcaptchas/</a>
+					</p>
 				</section>
 
 
